# dj-commerce-api

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.json  dev-requirements.txt  pyproject.toml
address/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
address/management/commands/: populate_country_state.py
address/management/commands/json_data/: country_state_data.json  data.json
address/migrations/: 0001_initial.py  0002_alter_address_phone_number.py  0002_alter_country_options_country_zipcode_regex_and_more.py  0003_alter_address_state.py  0003_alter_state_code.py  0004_alter_address_state.py  0004_alter_country_zipcode_regex.py  0005_address_user_profile.py  0006_remove_address_user_profile_address_content_type_and_more.py
address/test/: test_models.py
brands/: admin.py  models.py  permissions.py  serializers.py  urls.py  viewsets.py
brands/migrations/: 0001_initial.py  0002_initial.py  0003_alter_brand_assets.py  0003_brand_is_public_brand_owner_alter_brand_name.py  0003_initial.py
categories/: admin.py  models.py  permissions.py  routers.py  serializers.py  urls.py  viewsets.py
categories/migrations/: 0001_initial.py
core/: asgi.py  celery.py  mixins.py  settings.py  urls.py  wsgi.py
media_assets/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  viewsets.py
media_assets/migrations/: 0001_initial.py  0002_alter_assetfile_file.py  0002_initial.py  0003_assetfile_owner.py  0004_assetfile_created_at_assetfile_updated_at.py
products/: admin.py  models.py  serializers.py  urls.py  viewsets.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_remove_media_product_inventory_and_more.py  0003_initial.py  0003_productvariant_created_at_productvariant_sku_and_more.py  0004_product_owner.py  0004_product_stock_alter_productvariant_product.py  0005_productvariant_remove_product_stock_and_more.py  0006_productvariant_name.py  0007_productvariant_is_active.py  0008_productattribute_owner_productattributevalue_owner_and_more.py  0009_alter_product_owner.py
sellers/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
sellers/migrations/: 0001_initial.py  0002_alter_sellerprofile_user.py  0003_alter_sellerprofile_user.py  0004_sellerprofile_profile_picture.py
tests/: conftest.py  factories.py  utils.py
tests/address/: factories.py  test_endpoints.py  test_models.py
tests/brands/: test_endpoints.py  test_models.py
tests/categories/: test_endpoints.py  test_models.py
tests/users/: test_endpoints.py  test_models.py
users/: admin.py  apps.py  managers.py  models.py  signals.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0002_seller_customuser_is_seller_userprofile_and_more.py  0003_alter_customuser_managers.py  0003_user.py  0004_alter_customuser_options.py  0005_alter_customuser_managers.py  0006_remove_sellerprofile_user_delete_seller_and_more.py  0007_userprofile_address_alter_userprofile_user.py  0008_alter_userprofile_user.py  0009_remove_userprofile_address.py  0010_userprofile_profile_picture.py
