[project]
name = "dj-commerce-api"
version = "0.1.0"
description = "Fully featured E-Commerce API using Django and Django Rest Framework"
authors = [
    { name = "Uzzal Hossain", email = "de3dm3nu11@gmail.com" }
]
dependencies = ["django~=4.2.1", "django-environ~=0.10.0", "psycopg[binary]~=3.1.9"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["reorder-python-imports~=3.9.0"]
